fix: Removed arrows from type number inputs on Firefox

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -13,11 +13,16 @@
   background-color: url('./src/public/bg.jpg');
 } */
 
+/* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  /* display: none; <- Crashes Chrome on hover */
   -webkit-appearance: none;
-  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
 
 input:disabled {
